--- a/DESeq2.Rmd
+++ b/DESeq2.Rmd
@@ -1,4 +1,4 @@
-`r opts_chunk$set(cache=TRUE, fig.width=12)`
+`r opts_chunk$set(cache=FALSE, fig.width=12)`
 <link href="http://joey711.github.com/phyloseq/markdown.css" rel="stylesheet"></link>
 
 
